<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_live_scores"
        android:title="@string/show_live_scores" />

    <ListPreference
        android:defaultValue="0"
        android:dependency="show_live_scores"
        android:entries="@array/countries"
        android:entryValues="@array/country_values"
        android:key="country"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/country" />

    <me.malladi.dashcricket.LiveScoreIdPreference
        android:defaultValue="0"
        android:dependency="show_live_scores"
        android:key="live_score_id"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/match" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="link_to_mobile_site"
        android:title="@string/link_to_mobile_site"
        android:summary="@string/link_to_mobile_site_summary" />

</PreferenceScreen>